# rustedbytes-tl

./: Cargo.toml  README.md
benches/: tl.rs
fuzz/: Cargo.toml
src/: bytes.rs  errors.rs  lib.rs  stream.rs  tests.rs  vdom.rs
src/inline/: hashmap.rs  mod.rs  vec.rs
src/parser/: base.rs  handle.rs  tag.rs
src/queryselector/: iter.rs  iterable.rs  parser.rs  selector.rs
src/simd/: mod.rs  portable.rs
