[package]
name = "astral-tl"
version = "0.1.0"
authors = ["y21", "Yehor Smoliakov"]
edition = "2021"
license = "MIT"
description = "Fast HTML parser written in pure Rust"
repository = "https://github.com/astral-sh/astral-tl"
homepage = "https://github.com/astral-sh/astral-tl"
readme = "README.md"
documentation = "https://docs.rs/astral-tl"
keywords = ["html", "parser"]
categories = ["parser-implementations", "parsing"]
exclude = [".github/*"]

# for fuzzing and benchmarking internals, we need to make them public so that they can be accessed from outside testing crates
# users of the library should never use these directly
[features]
default = []
std = ["memchr/std"]
__INTERNALS_DO_NOT_USE = []

[dependencies]
memchr = { version = "2.8", default-features = false }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "tl"
harness = false

[lib]
name = "tl"
